2002-10-02 garlick
	* Changed protocol so query-status is now status and requires an
	  argument, and query-nodes is now nodes.
	* No more server action queue.
	* Device actions notify client when they complete.  A count of 
	  outstanding actions in the client structure is decremented as 
	  each completes and when zero, returns success or failure depending
	  on wether any of the actions failed.
	* Device actions now have an error flag.  If set, when the action
	  completes, an error flag is set in the client.
	* More than one client may initiate actions in parallel across the
	  cluster.  This works as each device has a queue.

2002-09-30 garlick
	* Added debug.[ch] and changed --telemetry to --debug mask
	* Fixed bug where _reconnect did not update the file descriptor
	  in the underlying buffer.

2002-09-29 garlick
	* Tagged powerman-1-0-6.

2002-09-25 garlick
	* Reimplement _process_delay() so it uses the select loop to time out.
	* Incomplete work on _process_expect() so it uses the select loop
	  to time out. TODO: 
	  - no response does not cause a timeout
	  - expect timeout should cause actions to be retried
	  - results need to be included in the client reply
	* Added separate ice box v3 config - i think the timeouts/delays
	  are going to be subtly different but worth caring about at MCR scale.

2002-09-25 garlick
	* Removed inter-dev delay (behlendo)
	* Removed timeout interval and update interval.
	* Disabled automatic status queries.
	* Tagged powerman-1-0-5.

2002-09-23 garlick
	* Create per-device reconnect state (count and time stamp)
	* Removed seperate soft power monitoring device from Plug.
	* Remove periodic status query.
	* Implement a sane reconnect algorithm.
	* Handle 'quit' command immediately (don't queue it).

2002-09-22 garlick
	* Improve handling of numeric values in config files.  They are no 
	  longer specified in quotes.  Floats are parsed by strtod; integers
	  are parsed by strtol.